--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-voice/voice": "^3.2.2",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.24.0",
+    "axios-hooks": "^3.0.0",
     "expo": "~43.0.2",
     "expo-av": "~10.1.3",
     "expo-blur": "~10.0.3",
