--- a/app.json
+++ b/app.json
@@ -1,39 +1,7 @@
 {
-  "expo": {
-    "name": "quran-listening-app",
-    "slug": "quran-listening-app",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      },
-      "permissions": [
-        "android.permission.RECORD_AUDIO"
-      ],
-      "package": "com.ahmadashfaq.quranlisteningapp"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "@react-native-voice/voice"
-    ]
-  }
+  "name": "quranapp",
+  "displayName": "quranapp",
+  "version": "1.0.0",
+  "orientation": "portrait",
+  "icon": "./assets/icon.png"
 }
