--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "quran-listening-app",
-  "version": "1.0.0",
+  "name": "quranapp",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
@@ -16,31 +17,37 @@
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "axios-hooks": "^3.0.0",
-    "expo": "~43.0.2",
-    "expo-av": "~10.1.3",
-    "expo-blur": "~10.0.3",
-    "expo-document-picker": "~10.0.3",
-    "expo-splash-screen": "~0.13.5",
-    "expo-status-bar": "~1.1.0",
-    "expo-updates": "~0.10.13",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.66.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.10.0",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.16.0",
+    "@babel/runtime": "^7.16.3",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "@types/jest": "^27.0.3",
+    "@types/react": "^17.0.36",
+    "@types/react-native": "^0.66.5",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "@types/react-test-renderer": "^17.0.1",
+    "babel-jest": "^27.3.1",
+    "eslint": "^8.3.0",
+    "jest": "^27.3.1",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.5.2"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
