--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,8 @@ platform :ios, '11.0'
 
 target 'quranapp' do
   config = use_native_modules!
-
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-Microphone', :path => "#{permissions_path}/Microphone"
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
@@ -13,6 +14,8 @@ target 'quranapp' do
   )
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'react-native-voice', :path => '../node_modules/@react-native-voice/voice'
 
   target 'quranappTests' do
     inherit! :complete
