--- a/ios/quranapp/Info.plist
+++ b/ios/quranapp/Info.plist
@@ -39,6 +39,8 @@
 	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSMicrophoneUsageDescription</key>
+  	<string>ForRecording</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
